3.4
	+ Move run-pending-ops script from remoteservices to core
	+ Rename EBox::RemoteServices::RESTResult to EBox::RESTClient::Result
	+ Move EBox::RemoteServices::RESTClient to EBox::RESTClient as it
	  is used in ha and remoteservices module.
	+ Adapt init.d and upstart running checks to Ubuntu 13.10
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Adapted apache configuration to 2.4
	+ Adapted EBox::Config::Redis to the new libredis-perl API
	+ Adapted redis.conf to redis 2.6
	+ Fixed general widget packages to avoid error on 'packages to
	  upgrade' section
	+ Fixed regression when table size is set to 'view all'
	+ Set version to 3.4
3.3.1
	+ Fixed redirects in table/form JSON replies
	+ Set automated ticket report milestone to 3.3.X
3.3
	+ Refactored module not enabled warning
	+ Add version to header logo
	+ HTML body can now have different styles based on the menu section
	+ Hide close button on saving changes and backup progess
	  dialogs. Don't allow to close it with esc key on those cases.
	+ Fix error when pageSize parameter is not supplied to the model controller
	+ Workaround against modules changed when saving all changes
	+ Recover from widget function exceptions
	+ Use the same Mason interpreter for most HTML templates
	+ Use more granular AJAX for table actions
	+ Use stand-alone AJAX call to refresh save changes button
	+ Added missing use to EBox::CGI::Base
	+ Allow to submit apport crash reports if debug=yes
	+ Switch from Error to TryCatch for exception handling
	+ Added new communityEdition() helper method in EBox::Global
	+ Add version to header logo
	+ Always reload page after saving changes
	+ Use AJAX call to refresh save change buttons
	+ Copy all the redis keys from 'conf' to 'ro' when saving changes of
	  any module to prevent incoherences
	+ Delete unused stopAllModules() and restartAllModules() in EBox::Global
	+ Workaround against modules changed when saving all changes