@@ -1,4 +1,6 @@
 3.4
+	+ Include basic support to free-format Template models to be
+	  included in Composites
 	+ Move run-pending-ops script from remoteservices to core
 	+ Rename EBox::RemoteServices::RESTResult to EBox::RESTClient::Result
 	+ Move EBox::RemoteServices::RESTClient to EBox::RESTClient as it
